Final corrections and spellchecked.

--- a/theend.tex
+++ b/theend.tex
@@ -1,10 +1,10 @@
 % % % % % % % % % % % % % % % % % % % % % % 
 % theend.tex - Ian Huston
-% $Id: theend.tex,v 1.20 2009/11/23 13:46:03 ith Exp $
+% $Id: theend.tex,v 1.21 2009/11/29 14:46:33 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
 \renewcommand{\CVSrevision}%
-{\version$Id: theend.tex,v 1.20 2009/11/23 13:46:03 ith Exp $}
+{\version$Id: theend.tex,v 1.21 2009/11/29 14:46:33 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -15,8 +15,10 @@
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 
-As the number of viable cosmological models increases, the need to constrain them becomes more
-important. At the same time, the quantity and quality of observational data continues to improve.
+As the number of viable cosmological models increases, the need to constrain
+them becomes more
+important. At the same time, the quantity and quality of observational data continue
+to improve.
 There now exists the opportunity to go beyond linear statistical analyses
 and confront the predictions of models with observational data from the non-linear
 regime. In this thesis both analytic and numerical methods have been developed to
@@ -48,10 +50,11 @@ six-dimensional warped throat. The radial position of the brane from the tip of 
 throat assumes the role of the inflaton field. The non-canonical nature of the DBI
 action restricts the kinetic energy of this field no matter how steep the potential.
 This allows an inflationary period of sufficient duration to occur.
-This model was widely regarded as a very promising realisation of an inflationary
+This model has been widely regarded as a very promising realisation of an
+inflationary
 model in a string-theory context.
 
-In \Rref{bmpaper}, Baumann and McAllister used the Lyth bound \cite{lyth} to limit
+In \Rref{bmpaper}, Baumann \& McAllister used the Lyth bound \cite{lyth} to limit
 the tensor-scalar ratio. Their analysis was based on the conservative assumption that the brane
 could
 not propagate further than the full length of the throat. In Chapter~\ref{ch:dbi},
@@ -77,11 +80,6 @@ viable. Numerical simulations by Peiris \etal in \Rref{Peiris:2007gz} have
 demonstrated the lower bound, in the relativistic limit, using the
 Hamiltonian flow approach.
 
-The discovery of these incompatible bounds for DBI inflation has had a noticeable
-impact on the research community, spurring interest in finding models which evade
-these bounds. Many such models have been proposed with varying degrees of success. In
-Section~\ref{sec:others-dbi} these were categorised according to whether they
-featured single or multiple fields, and single or multiple branes. 
 
 In Section~\ref{sec:relaxing-dbi}, a phenomenological approach was taken to easing
 the upper bound on the tensor-scalar ratio. By considering a DBI-type action with unspecified field
@@ -89,9 +87,14 @@ functions,
 $f_i$, we showed that the generalised lower and upper bounds can be consistent
 if the product of $f_1$ and $f_2$ is sufficiently large on observable scales.
 
+The discovery of these incompatible bounds for DBI inflation has had a noticeable
+impact on the research community, spurring interest in finding models which evade
+these bounds. Many such models have been proposed with varying degrees of success. In
+Section~\ref{sec:others-dbi} these were categorised according to whether they
+featured single or multiple fields, and single or multiple branes. 
 
 % Multi
-More general actions, which relax the bounds on $r$, were derived in
+General actions which relax the bounds on $r$, were derived in
 Chapter~\ref{ch:multibrane}. 
 We found a class of actions similar in form to that of the DBI model. 
 However, instead of a square-root in the kinetic term, the index of the main term of these
@@ -104,7 +107,7 @@ When new models are proposed in the future, our phenomenological derivation of t
 actions will allow those models for which the bound on $r$ is less stringent to be easily
 identified.
 
-Once such model is the single field, coincident brane scenario of
+One such model is the single field, multi-coincident brane scenario of
 Thomas \& Ward \cite{thomasward}. When $n$ D3-branes propagate in a throat, the
 non-Abelian interactions between the branes result in major departures from the
 single brane case. This is in contrast to the non-interacting branes model, in which
@@ -121,7 +124,7 @@ questionable.
 More promising is the finite $n$ limit of the coincident brane model. The
 non-Abelian nature of the interactions leads, in this case, to a recursive relation for
 the $n$-brane action in terms of the $n=2$ one. In
-Section~\ref{sec:finiten-multi} we showed that the action for finite $n$ is one of
+Section~\ref{sec:finiten-multi}, we showed that the action for finite $n$ is one of
 the class of bound-evading actions described above. This identification is possible
 because the last term of the recursive sum dominates in the relativistic limit. This
 approximation is valid at least when $n<10$ and the backreaction of the multiple
@@ -130,7 +133,7 @@ branes is kept well under control for this range of $n$.
 Although the bounds on $r$ are eased
 for this model, we showed that observations strongly constrain the possibility of
 an observable tensor signal being generated. If an observable tensor-scalar ratio is
-considered to be $r>10^{-4}$ then only the two or three brane cases are capable of
+considered to be $r>10^{-4}$, then only the two or three brane cases are capable of
 producing such a signal. This bound on $n$ depends on the WMAP5 limit on $\fnleq$.
 If, as expected, the observational limits on $\fnleq$ tighten considerably in the
 future, the possibility of an observable tensor signal from the multi-coincident
@@ -305,17 +308,17 @@ generation of vorticity in the early universe.
 
 
 The numerical calculation described is the first step towards a system capable of
-handling the multi-field, non-slow roll models, for which non-linear contributions
+handling the multi-field, non-slow roll models for which non-linear contributions
 are important. In Section~\ref{sec:next-res}, the next steps towards this goal were
 outlined. 
 % 
 Continuing our work by calculating the second order perturbations for both the
 non-slow roll, single field case and the slow
-roll, multi-field case will pave the way for the calculation of the
+roll, multi-field case will pave the way for the eventual calculation of the
 non-slow roll, multi-field equations.
 % 
 
-The full single field, non-slow roll equation can be treated using the
+The full single field, non-slow roll, second order equation can be treated using the
 method already described. 
 Three more $\theta$ dependent terms are necessary to
 compute the full convolution integral in this case. It will be important to find
@@ -328,7 +331,7 @@ expand the numerical system to encompass two or three scalar fields. The differe
 between single and multi-field models are already apparent for these cases. We have
 presented the slow roll source term equation for multiple fields in vector notation.
 The definitions of the four $\theta$ dependent terms used in the single
-field slow roll model were also extended to the multi-field case. Beyond the slow
+field, slow roll model were also extended to the multi-field case. Beyond the slow
 roll approximation, the full multi-field equation should be treatable in a similar
 manner to the single field case, by introducing further $\theta$ dependent terms.
 
