Fixed hboxs and eqn spacing.

--- a/dbi/dbi-intro.tex
+++ b/dbi/dbi-intro.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % % 
 % dbi-intro.tex - Ian Huston
-% $Id: dbi-intro.tex,v 1.63 2009/11/28 12:42:08 ith Exp $
+% $Id: dbi-intro.tex,v 1.64 2009/11/30 12:11:02 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.63 2009/11/28 12:42:08 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.64 2009/11/30 12:11:02 ith Exp $}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
@@ -791,7 +791,7 @@ complicated geometries and additional fluxes must be used to stabilise the
 remaining moduli fields. 
 
 The DBI scenario 
-is a particular example of the non-canonical inflationary paradigm described in
+is a particular example of the non-canonical inflationary para\-digm described in
 Section~\ref{sec:noncanoninfl}. 
 The radial position of a D3-brane in a warped throat is identified as the inflaton field. While the
 brane propagates up or down the throat, the kinetic energy of the inflaton is bounded
