--- a/numerical/perts.tex
+++ b/numerical/perts.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % numerical-intro.tex - Ian Huston
-% $Id: perts.tex,v 1.32 2009/11/28 17:10:54 ith Exp $
+% $Id: perts.tex,v 1.33 2009/11/30 12:11:02 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: perts.tex,v 1.32 2009/11/28 17:10:54 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: perts.tex,v 1.33 2009/11/30 12:11:02 ith Exp $}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
@@ -59,8 +59,8 @@ other quantities. In Part~\ref{part:dbi}, however, it was shown that $\fnl$ can
 already be used to rule out models with particularly strong non-Gaussian signatures.
 
 
-There are two main approaches to studying higher order effects and
-non-Gaussianity.  
+There are two main approaches to studying 
+non-Gaussianity and higher order effects.  
 The first uses non-linear theory and a gradient expansion in various
 forms, either explicitly, \eg
 Refs.~\cite{Salopek:1990jq,Rigopoulos:2005xx}, or through the
