--- a/numerical/results.tex
+++ b/numerical/results.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % results.tex - Ian Huston
-% $Id: results.tex,v 1.33 2009/11/29 14:03:21 ith Exp $
+% $Id: results.tex,v 1.34 2009/11/30 12:11:02 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: results.tex,v 1.33 2009/11/29 14:03:21 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: results.tex,v 1.34 2009/11/30 12:11:02 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -757,17 +757,17 @@ including $\eta_{IJ}$ are included when making the slow roll approximation
 The second order, slow roll, vector equation for the perturbations is given by 
 % 
 \begin{align}
- \bm{\dvp2}''(\kvi) + 2\H\bm{\dvp2}'(\kvi) 
+ \bm{\dvp2}''(\kvi) &+ 2\H\bm{\dvp2}'(\kvi) 
  + \left( k^2\bm{1} + a^2\bm{V_2} - 24\pi G \bm{\vp_0}' \left(\bm{\vp_0}'\right)^T \right)
-       \bm{\dvp2}(\kvi)
- + \bm{S}(\kvi) = \bm{0}\,,
+       \bm{\dvp2}(\kvi) \nonumber\\ 
+ &+ \bm{S}(\kvi) = \bm{0}\,,
 \end{align}
 % 
 where the slow roll source term equation is
 % 
 \begin{align}
 \label{eq:src-vector-res}
-\bm{S}(\kvi) =  
+\bm{S}(\kvi) =\,  
 &\frac{1}{(2\pi)^3}\int \d^3p\ \d^3q\ \delta^3(\kvi-\pvi-\qvi) \Bigg\{ \\
 % 
 &a^2 \Bigg[ 
@@ -775,9 +775,9 @@ where the slow roll source term equation is
 \dvp1(\pvi) & \delta \chi_1(\pvi) & 0  \nonumber\\
 0           & \dvp1(\pvi)         & \delta \chi_1(\pvi) 
 \end{pmatrix}
-\bm{V_3}\bm{\dvp1}(\qvi) 
+\bm{V_3}\bm{\dvp1}(\qvi) \nonumber \\
 % 
-+ \frac{8\pi G}{\H}\left( 
+&+ \frac{8\pi G}{\H}\left( 
     \bm{\dvp1}^T(\pvi) \bm{V_2} \bm{\dvp1}(\qvi)
 \right) \bm{\vp_0}' \Bigg] \nonumber\\
 % 
@@ -804,13 +804,13 @@ are given by
 \begin{align}
 \label{eq:AtoD-vectors-res}
  \A_\vp(\kvi,\qvi) &= \int_0^\pi \sin(\theta) \dvp1(\kvi-\qvi) \d\theta \,,
-\nonumber \\ \displaybreak
+\nonumber \\ \displaybreak[0]
  \A_\chi(\kvi,\qvi) &= \int_0^\pi \sin(\theta) \delta \chi_1(\kvi-\qvi) \d\theta \,,
-\nonumber\\ \displaybreak
+\nonumber\\ \displaybreak[0]
  \bm{\A}(\kvi,\qvi) &= \int_0^\pi \sin(\theta) \bm{\dvp1}(\kvi-\qvi) \d\theta \,,
-\nonumber\\ \displaybreak
+\nonumber\\ \displaybreak[0]
  \bm{\B}(\kvi,\qvi) &= \int_0^\pi \cos(\theta)\sin(\theta) \bm{\dvp1}(\kvi-\qvi)
-\d\theta \,,\nonumber\\ \displaybreak
+\d\theta \,,\nonumber\\ \displaybreak[0]
  \bm{\C}(\kvi,\qvi) &= \int_0^\pi \sin(\theta) \bm{\dvp1}'(\kvi-\qvi) \d\theta \,,
 \nonumber\\
  \bm{\D}(\kvi,\qvi) &= \int_0^\pi \cos(\theta) \sin(\theta) \bm{\dvp1}'(\kvi-\qvi)
@@ -822,7 +822,7 @@ matrix term in \eq{eq:src-vector-res}. We rewrite that equation with these
 definitions to obtain:
 % 
 \begin{align}
- \bm{S}(\kvi) = &\frac{1}{(2\pi)^2}\int\d q \Bigg\{ \nonumber \\
+ \bm{S}(\kvi) =\, &\frac{1}{(2\pi)^2}\int\d q \Bigg\{ \nonumber \\
 % 
 &a^2 q^2\Biggl[ \begin{pmatrix}
                  \A_\vp(\kvi,\qvi) & \A_\chi(\kvi,\qvi) & 0 \\
