--- a/acknowledgements.tex
+++ b/acknowledgements.tex
@@ -1,11 +1,32 @@
 % % % % % % % % % % % % % % % % % % % % % % 
 % acknowledgements.tex - Ian Huston
-% $Id: acknowledgements.tex,v 1.4 2009/07/14 14:05:11 ith Exp $
+% $Id: acknowledgements.tex,v 1.5 2009/11/30 14:46:57 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: acknowledgements.tex,v 1.4 2009/07/14 14:05:11 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: acknowledgements.tex,v 1.5 2009/11/30 14:46:57 ith Exp $}
 % 
 % 
 \chapter*{Acknowledgements}
 \label{ch:acknowledgements}
 \addcontentsline{toc}{chapter}{Acknowledgements}
+
+First, I would like to thank Jim Lidsey, Karim Malik and Reza Tavakol for all their help and
+guidance. Thank you to the past and present members of Room 301, and all my other colleagues in
+QMUL who make working there such a pleasant experience.
+
+I am very grateful to Cathy, Sara, Susan, Lisa, Kevin, Fiona and Andrew for putting up with me over
+the past few years and making the move to London so enjoyable. And thank you to all my friends for
+for not letting me talk about work when around them.
+
+I am indebted to my parents, Brian and Phil, and my brother and sister, Paul and Anne for all
+their support and encouragement. 
+
+Finally, I could not have survived the last few years and especially the last few months without 
+Gr\'{a}inne beside me. Thank you for everything.
+
+\vfill
+
+This work was funded by a combination of a PPARC/STFC Studentship, a Queen Mary Studentship and an
+EPSTAR grant.  
+
+
