--- a/acknowledgements.tex
+++ b/acknowledgements.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % % 
 % acknowledgements.tex - Ian Huston
-% $Id: acknowledgements.tex,v 1.5 2009/11/30 14:46:57 ith Exp $
+% $Id: acknowledgements.tex,v 1.6 2009/11/30 14:48:03 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: acknowledgements.tex,v 1.5 2009/11/30 14:46:57 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: acknowledgements.tex,v 1.6 2009/11/30 14:48:03 ith Exp $}
 % 
 % 
 \chapter*{Acknowledgements}
@@ -18,7 +18,7 @@ I am very grateful to Cathy, Sara, Susan, Lisa, Kevin, Fiona and Andrew for putt
 the past few years and making the move to London so enjoyable. And thank you to all my friends for
 for not letting me talk about work when around them.
 
-I am indebted to my parents, Brian and Phil, and my brother and sister, Paul and Anne for all
+I am indebted to my parents, Brian and Phil, and my brother and sister, Paul and Anne, for all
 their support and encouragement. 
 
 Finally, I could not have survived the last few years and especially the last few months without 
