--- a/acknowledgements.tex
+++ b/acknowledgements.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % % 
 % acknowledgements.tex - Ian Huston
-% $Id: acknowledgements.tex,v 1.6 2009/11/30 14:48:03 ith Exp $
+% $Id: acknowledgements.tex,v 1.7 2009/11/30 16:29:36 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: acknowledgements.tex,v 1.6 2009/11/30 14:48:03 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: acknowledgements.tex,v 1.7 2009/11/30 16:29:36 ith Exp $}
 % 
 % 
 \chapter*{Acknowledgements}
@@ -16,7 +16,7 @@ QMUL who make working there such a pleasant experience.
 
 I am very grateful to Cathy, Sara, Susan, Lisa, Kevin, Fiona and Andrew for putting up with me over
 the past few years and making the move to London so enjoyable. And thank you to all my friends for
-for not letting me talk about work when around them.
+not letting me talk about work when around them.
 
 I am indebted to my parents, Brian and Phil, and my brother and sister, Paul and Anne, for all
 their support and encouragement. 
@@ -26,7 +26,7 @@ Gr\'{a}inne beside me. Thank you for everything.
 
 \vfill
 
-This work was funded by a combination of a PPARC/STFC Studentship, a Queen Mary Studentship and an
-EPSTAR grant.  
+This work was funded by a combination of a PPARC/STFC Studentship and a Queen Mary Studentship and
+by the EPSTAR consortium (Queen Mary).  
 
 
