Changed to full width.

--- a/dbi/dbi-intro.tex
+++ b/dbi/dbi-intro.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % % 
 % dbi-intro.tex - Ian Huston
-% $Id: dbi-intro.tex,v 1.64 2009/11/30 12:11:02 ith Exp $
+% $Id: dbi-intro.tex,v 1.65 2009/12/07 14:49:01 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.64 2009/11/30 12:11:02 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.65 2009/12/07 14:49:01 ith Exp $}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
@@ -537,7 +537,7 @@ equation for the inflaton is determined by a DBI action.
 % 
 \begin{figure}[htbp]
  \centering
- \includegraphics[width=0.8\textwidth]{dbi/graphs/cymanifold}
+ \includegraphics[width=\textwidth]{dbi/graphs/cymanifold}
  \caption[Calabi-Yau Manifold]{A representation of the Calabi-Yau manifold in the 6
 compactified
 dimensions. Throats are connected to the main bulk. D3-branes appear as dots.}
