Changed to Jim.

--- a/acknowledgements.tex
+++ b/acknowledgements.tex
@@ -1,16 +1,16 @@
 % % % % % % % % % % % % % % % % % % % % % % 
 % acknowledgements.tex - Ian Huston
-% $Id: acknowledgements.tex,v 1.7 2009/11/30 16:29:36 ith Exp $
+% $Id: acknowledgements.tex,v 1.8 2009/12/07 15:38:13 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: acknowledgements.tex,v 1.7 2009/11/30 16:29:36 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: acknowledgements.tex,v 1.8 2009/12/07 15:38:13 ith Exp $}
 % 
 % 
 \chapter*{Acknowledgements}
 \label{ch:acknowledgements}
 \addcontentsline{toc}{chapter}{Acknowledgements}
 
-First, I would like to thank Jim Lidsey, Karim Malik and Reza Tavakol for all their help and
+First, I would like to thank James Lidsey, Karim Malik and Reza Tavakol for all their help and
 guidance. Thank you to the past and present members of Room 301, and all my other colleagues in
 QMUL who make working there such a pleasant experience.
 
