--- a/mainintro.tex
+++ b/mainintro.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % mainintro.tex - Ian Huston
-% $Id: mainintro.tex,v 1.67 2009/12/07 14:49:01 ith Exp $
+% $Id: mainintro.tex,v 1.68 2009/12/07 15:38:40 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: mainintro.tex,v 1.67 2009/12/07 14:49:01 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: mainintro.tex,v 1.68 2009/12/07 15:38:40 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -417,6 +417,7 @@ Observations require that inflation lasted at least long enough that all the
 scales we measure today were previously inside the horizon. 
 % 
 \begin{figure}[htbp]
+\centering
  \includegraphics[width=\textwidth]{graphs/scales.pdf}
  \caption[Comoving Scales and the Hubble Radius]{Comoving scales that have recently
 entered the horizon would
