--- a/declaration.tex
+++ b/declaration.tex
@@ -1,6 +1,43 @@
-% % % % % % % % % % % % % % % % % % % % % % % 
-% declaration.tex
-% $Id: declaration.tex,v 1.2 2009/07/12 17:47:59 ith Exp $
-% % % % % % % % % % % % % % % % % % % % % % % 
-% Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: declaration.tex,v 1.2 2009/07/12 17:47:59 ith Exp $}
+\documentclass[a4paper,10pt]{article}
+
+
+%opening
+\title{}
+\author{Ian Huston}
+
+\begin{document}
+\section*{Declaration}
+\thispagestyle{empty}
+I hereby certify that this thesis, which is approximately 45,000 words in length,
+has been written by me; that it is the record of the work carried out by me at the
+Astronomy Unit, Queen Mary, University of London, and that it has not been submitted
+in any previous application for a higher degree.
+\\
+Chapter~4 primarily contains work done with James E.
+Lidsey and published in the Journal of Cosmology and Astroparticle Physics (JCAP)
+\cite{lidseyhuston}. Section~5.4 also contains work published
+in Ref.~\cite{lidseyhuston}.
+% 
+The majority of Chapter~5 is based on work completed in
+collaboration with James E. Lidsey, Steven Thomas and John Ward and published in JCAP
+\cite{hltw}. 
+% 
+Chapters~6, 7 and 8 contain work
+done with Karim Malik, and large parts of these chapters were published in JCAP
+\cite{hustonmalik}.
+\\
+I have made a major contribution to all the original research presented in this
+thesis.
+\vfill
+\begin{flushright}
+Candidate: Ian Huston\\
+\end{flushright}
+\vfill
+\begin{flushright}
+Supervisor: James Lidsey
+\end{flushright}
+
+\vfill
+\bibliography{thesis}
+\bibliographystyle{../packages/utphys}
+\end{document}
