Changed to \gtrsim.

--- a/dbi/dbi-intro.tex
+++ b/dbi/dbi-intro.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % % 
 % dbi-intro.tex - Ian Huston
-% $Id: dbi-intro.tex,v 1.65 2009/12/07 14:49:01 ith Exp $
+% $Id: dbi-intro.tex,v 1.66 2009/12/07 16:43:29 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.65 2009/12/07 14:49:01 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.66 2009/12/07 16:43:29 ith Exp $}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
@@ -824,7 +824,7 @@ DBI models.
 % towards the tip of the throat. We will assume implicitly 
 % that the sound speed is sufficiently small to generate a non-Gaussianity with
 % magnitude in 
-% excess of $|\fnl| \, {\gsim} \, 5$, since this is the projected 
+% excess of $|\fnl| \gtrsim 5$, since this is the projected 
 % sensitivity of the Planck satellite \cite{planck}. Furthermore, we consider   
 % an arbitrary warp factor and inflaton potential, 
 % subject only to the condition that a sufficiently long phase of 
