--- a/dbi/dbi.tex
+++ b/dbi/dbi.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % dbi.tex - Ian Huston
-% $Id: dbi.tex,v 1.68 2009/11/28 12:44:01 ith Exp $
+% $Id: dbi.tex,v 1.69 2009/12/07 16:43:29 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.68 2009/11/28 12:44:01 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.69 2009/12/07 16:43:29 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -29,7 +29,7 @@ In this chapter two bounds on the amplitude of primordial gravitational waves wi
 severely challenge the standard
 DBI inflationary scenario. By considering the field range of observable
 inflation inside a warped throat, the tensor-scalar ratio $r$ will be
-constrained to be less than $10^{-7}$. In contrast a lower bound of $r\gsim
+constrained to be less than $10^{-7}$. In contrast a lower bound of $r\gtrsim
 0.005$ will be derived when the power spectrum of scalar perturbations has a red
 spectral index. These clearly incompatible bounds can be relaxed by using a more
 general form of the DBI action.
@@ -72,7 +72,7 @@ $n_s<1$, when
 the scalar spectral index is effectively constant \cite{Komatsu:2008hk}. 
 For models which generate such a spectrum, 
 we identify a corresponding lower limit on the 
-tensor modes such that $r \, \gsim \, 0.1 (1-n_s)$. 
+tensor modes such that $r \gtrsim 0.1 (1-n_s)$. 
 This is incompatible with the upper bound 
 on $r$ when $1-n_s \simeq 0.03$, as inferred
 by the observations. 
@@ -314,7 +314,7 @@ r_* < 10^{-7} \,.
 The bound \eqref{eq:standardbound} is the main result of this section.
 This value of $r$ is significantly below the sensitivity 
 of future CMB polarisation experiments, which will measure 
-${r} \, {\gsim} \, 10^{-4}$ \cite{Baumann:2008aq,vpj}. 
+${r} \gtrsim 10^{-4}$ \cite{Baumann:2008aq,vpj}. 
 If CMB  
 observations are able to span the full range of e-foldings such that
 $\Delta \N_* \simeq 4$, this constraint is strengthened to 
@@ -1134,7 +1134,7 @@ when both the gravitational waves and running in the scalar
 spectral index are negligible. For UV versions of the scenario, 
 we have identified a corresponding 
 lower limit on $r$ which applies in this region of 
-parameter space, $r_* \, \gsim \, 0.1 (1-n_s)$. It is clear that 
+parameter space, $r_* \gtrsim 0.1 (1-n_s)$. It is clear that 
 the standard scenario 
 cannot satisfy both the upper and lower bounds 
 on the tensor modes for the observationally favoured value 
