--- a/dbi/multibrane.tex
+++ b/dbi/multibrane.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % multibrane.tex - Ian Huston
-% $Id: multibrane.tex,v 1.62 2009/11/28 14:08:45 ith Exp $
+% $Id: multibrane.tex,v 1.63 2009/12/07 16:43:29 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: multibrane.tex,v 1.62 2009/11/28 14:08:45 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: multibrane.tex,v 1.63 2009/12/07 16:43:29 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -722,7 +722,7 @@ deduce the lower limit
 N- 12 \ln N > -6.8 +12 \ln \left( \frac{\sqrt{-\fnleq}}{1-n_s} \right) \,,
 \end{equation}
 % 
-which becomes $N \, \gsim \, 10^2$ for $1-n_s \simeq 0.05$ and $-\fnleq>5$.
+which becomes $N \gtrsim 10^2$ for $1-n_s \simeq 0.05$ and $-\fnleq>5$.
 
 
 In general, however, the $K$ and $M$ units of flux are not independent. 
@@ -1167,10 +1167,10 @@ r_* < 5 \times 10^{-4} \, .
 
 
 This limit is below the sensitivity of the Planck satellite 
-$(r \gsim 0.02 )$ \cite{planck}. On the other hand, 
+$(r \gtrsim 0.02 )$ \cite{planck}. On the other hand, 
 the projected sensitivity of future CMB polarisation experiments 
 indicates that a background of primordial 
-gravitational waves with $r_* \gsim 10^{-4}$ 
+gravitational waves with $r_* \gtrsim 10^{-4}$ 
 should be observable \cite{songknox,vpj, Baumann:2008aq}. In view of this, 
 it is interesting to consider whether
 a detectable gravitational wave background could in principle 
