--- a/ihmacros.sty
+++ b/ihmacros.sty
@@ -1,6 +1,6 @@
 % % % % % % % % % % % % % % % % % 
 % ihmacros.sty - Ian Huston
-% $Id: ihmacros.sty,v 1.26 2009/11/12 23:42:49 ith Exp $
+% $Id: ihmacros.sty,v 1.27 2009/12/07 16:43:29 ith Exp $
 % % % % % % % % % % % % % % % % % 
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesPackage{ihmacros}
@@ -121,8 +121,8 @@
 \renewcommand{\leq}{\leqslant}
 \renewcommand{\geq}{\geqslant}
 % 
-\newcommand{\gsim}{\mbox{\raisebox{-1.ex}{$\stackrel{\textstyle>}{\textstyle\sim}$}}}
-\newcommand{\lsim}{\mbox{\raisebox{-1.ex}{$\stackrel{\textstyle<}{\textstyle\sim}$}}}
+\newcommand{\gsim}{\gtrsim}
+\newcommand{\lsim}{\lesssim}
 % 
 \newcommand{\convolve}{\star}
 
