Changed 0-0 and i-j to 00 and ij on pg 17

--- a/mainintro.tex
+++ b/mainintro.tex
@@ -157,7 +157,7 @@ The trace of $T$ is given by
 % 
 The Einstein equations and the stress-energy tensor of the
 perfect fluid can now be used to derive the equations of motion of the fluid.
-From the metric in \eq{eq:frwmetric-intro}, the $0$-$0$ and $i$-$j$ components of the
+From the metric in \eq{eq:frwmetric-intro}, the $00$ and $ij$ components of the
 Ricci tensor can be found:
 % 
 \begin{align}
