Changed a(t) to a(\eta) on pg 18

--- a/mainintro.tex
+++ b/mainintro.tex
@@ -226,7 +226,7 @@ The metric written in conformal time is then
 % 
 \begin{equation}
  \label{eq:frwconformal-intro}
-\d s^2 = a^2(t)
+\d s^2 = a^2(\eta)
   \left( -\d\eta^2 +
     \frac{\d r^2}{1-Kr^2} + r^2\left(\d\theta^2 + \sin^2(\theta)
 \d\omega^2\right)
