Changed a(t) to a(\eta) on second line on pg 18

--- a/mainintro.tex
+++ b/mainintro.tex
@@ -234,7 +234,7 @@ The metric written in conformal time is then
 \end{equation}
 
 % 
-As all the coordinates in the line element are now scaled by $a(t)$, we
+As all the coordinates in the line element are now scaled by $a(\eta)$, we
 have defined a coordinate grid which does not change as the universe expands.
 These ``comoving'' coordinates allow distances to be compared at different
 eras with ease. A comoving distance $x$ can be translated into a physical
