Changed equation reference from 2.15 to 2.16 on pg 18

--- a/mainintro.tex
+++ b/mainintro.tex
@@ -249,7 +249,7 @@ will remain fixed.
 
 One particularly important distance is the maximum distance light could have
 propagated from some initial time $t_i$ to a later time $t$. From
-\eq{eq:comovingdefn-intro}, this is simply the conformal time integrated from
+\eq{eq:etalog-intro}, this is simply the conformal time integrated from
 the initial time and is called the comoving or particle horizon.
 If the initial time is restricted to
 being at some finite time in the past, as in the Big Bang scenario, then the
@@ -260,6 +260,7 @@ and will be discussed in the next section.
 Rewriting the comoving horizon as
 % 
 \begin{equation}
+\label{eq:etalog-intro}
  \eta = \int_{a_i}^a \frac{\d a'}{a'} \frac{1}{a' H(a')} \,,
 \end{equation}
 shows that it is also the logarithmic integral of the comoving Hubble
