Add 'where F_(1ij) = ...' after eq 2.34 on Pg 25.

--- a/mainintro.tex
+++ b/mainintro.tex
@@ -624,8 +624,10 @@ tensor parts \cite{Malik:2008im}:
 \begin{align}
 \label{eq:svt-intro}
   B_{1i} &= B_{1,i} - S_{1i} \,, \nonumber\\
-  C_{1ij} &= -\psi_1\delta_{ij} + E_{1,ij} + F_{1(i,j)} + \frac{1}{2}h_{1ij}\,.
+  C_{1ij} &= -\psi_1\delta_{ij} + E_{1,ij} + F_{1(i,j)} + \frac{1}{2}h_{1ij}\,,
 \end{align}
+% 
+where $F_{1(i,j)} = \frac{1}{2}(F_{1i,j} + F_{1j,i})$.
 % 
 The vectors $S_{1i}$ and $F_{1i}$ are divergence free and the tensor part
 $h_{1ij}$
